--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Start Scroll To Top -->
+    <div class="up">
+        <i class="fas fa-angle-up"></i>
+    </div>
+    <!-- End Scroll To Top -->
     <!-- Start Header -->
     <header>
         <div class="container">
@@ -55,7 +60,7 @@
             <div class="showcase">
                 <h3>F&R Designs</h3>
                 <p>Command which one you want and we'll make it real for you</p>
-                <a href="#" class="shop-btn">shop now</a>
+                <a href="#" class="shop-btn">shop now <i class="fas fa-shopping-cart"></i></a>
             </div>
             <div class="showcase-img">
                 <img src="images/showcase.jpg" alt="Image not found">
@@ -91,7 +96,7 @@
     <section class="latest-product">
         <div class="container">
             <div class="head">
-                <i class="fas fa-check-square"></i>
+                <i class="fas fa-tags"></i>
                 Latest Prodects
             </div>
             <div class="products">
@@ -209,19 +214,19 @@
         <div class="container">
             <ul class="shuffle">
                 <li class="active">
-                    <i class="fas fa-check-square"></i>
+                    <i class="fas fa-tags"></i>
                     All Products
                 </li>
                 <li>
-                    <i class="fas fa-check-square"></i>
+                    <i class="fas fa-tags"></i>
                     Trending Products
                 </li>
                 <li>
-                    <i class="fas fa-check-square"></i>
+                    <i class="fas fa-tags"></i>
                     Special Products
                 </li>
                 <li>
-                    <i class="fas fa-check-square"></i>
+                    <i class="fas fa-tags"></i>
                     Featured Products
                 </li>
             </ul>
@@ -913,7 +918,7 @@
     <section id="blog">
         <div class="container">
             <div class="head">
-                <i class="fas fa-check-square"></i>
+                <i class="fas fa-newspaper"></i>
                 Style News
             </div>
             <div class="cards">
@@ -954,6 +959,7 @@
                 <p>A short sentence describing what someone will receive by subscribing</p>
             </div>
             <form>
+                <i class="fas fa-envelope"></i>
                 <input type="email" placeholder="Enter your email adress">
                 <input type="submit" value="subscribe">
             </form>
@@ -1011,5 +1017,8 @@
         </div>
     </footer>
     <!-- End Footer -->
+
+    <!-- Main JS File -->
+    <script src="js/main.js"></script>
 </body>
 </html>
